# femtotorch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: CIFAR_CNN.py  CIFAR_CNN_BatchNorm.py  MNIST_CNN.py  MNIST_MLP.py  MNIST_OPTICNN.py  MNIST_VANILLA_CNN.py  MNIST_softmaxLinear.py  tests.py
milestones_examples/: CIFAR_CNN.py  CIFAR_VGG.py  MNIST_MLP.py
scripts/: download_cifar10.py  download_fashion.py  download_mnist.py
src/femtotorch/: Tensor.py  TensorV2.py  __init__.py  backend.py  dataloader.py  datasets.py  engine.py  engine_switch.py  loss.py  nn.py  operations.py  optimizer.py  profiler.py  tensor.py  weights.py
tests/: test_autograd.py  test_dataloader.py  test_datasets.py  test_loss.py  test_nn.py  test_optimizer.py  test_tensor.py  test_training.py
