[project]
name = "femtotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julien Marx", email = "julien.marx.2007@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.4; sys_platform != 'darwin'"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
